# herald

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html
herald/: __init__.py  analytics.py  chatbot.py  copilot.py  customers.py  database.py  knowledge.py  main.py  models.py  onboarding.py  seed.py  sentiment.py  tickets.py
tests/: conftest.py  test_analytics.py  test_chatbot.py  test_copilot.py  test_customers.py  test_sentiment.py  test_tickets.py
