[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herald"
version = "0.1.0"
description = "Customer operations stack — AI chatbot, support copilot, sentiment analytics, churn prediction"
authors = [{name = "Donald Havery", email = "dbhavery@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.26"]

[project.scripts]
herald = "herald.main:main"

[tool.setuptools.packages.find]
include = ["herald*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
